@@ -457,7 +457,7 @@ public class FileSystemRMStateStore extends RMStateStore {
         appState.getApplicationSubmissionContext().getApplicationId();
     Path nodeRemovePath = getAppDir(rmAppRoot, appId);
     LOG.info("Removing info for app: " + appId + " at: " + nodeRemovePath);
-    deleteFileWithRetries(nodeRemovePath);
+    checkAndRemovePathWithRetries(nodeRemovePath);
   }
 
   @Override
@@ -473,7 +473,7 @@ public class FileSystemRMStateStore extends RMStateStore {
     Path nodeCreatePath = getNodePath(rmDTSecretManagerRoot,
       DELEGATION_TOKEN_PREFIX + identifier.getSequenceNumber());
     LOG.info("Removing RMDelegationToken_" + identifier.getSequenceNumber());
-    deleteFileWithRetries(nodeCreatePath);
+    checkAndRemovePathWithRetries(nodeCreatePath);
   }
 
   @Override
@@ -537,14 +537,12 @@ public class FileSystemRMStateStore extends RMStateStore {
     Path nodeCreatePath = getNodePath(rmDTSecretManagerRoot,
           DELEGATION_KEY_PREFIX + masterKey.getKeyId());
     LOG.info("Removing RMDelegationKey_"+ masterKey.getKeyId());
-    deleteFileWithRetries(nodeCreatePath);
+    checkAndRemovePathWithRetries(nodeCreatePath);
   }
 
   @Override
   public synchronized void deleteStore() throws Exception {
-    if (existsWithRetries(rootDirPath)) {
-      deleteFileWithRetries(rootDirPath);
-    }
+	  checkAndRemovePathWithRetries(rootDirPath);
   }
 
   private Path getAppDir(Path root, ApplicationId appId) {
@@ -552,7 +550,15 @@ public class FileSystemRMStateStore extends RMStateStore {
   }
 
   // FileSystem related code
-
+  private void checkAndRemovePathWithRetries(final Path deletePath) 
+		  	throws Exception {
+	  if (existsWithRetries(deletePath)) {
+		  deleteFileWithRetries(deletePath);
+	  } else {
+		  LOG.info("File doesn't exist. Skip deleting the file " + deletePath);
+	  }
+  }
+  
   private boolean checkAndRemovePartialRecordWithRetries(final Path record)
       throws Exception {
     return new FSAction<Boolean>() {
